--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@700;800;900&display=swap");
 
+:root {
+  --missed-shots-color: #85ffb3;
+  --hit-shots-color: #ff8585;
+  --boats-color: #444444;
+  --bg-color: #dddddd;
+}
+
 body {
+  margin: 0;
+  height: 100vh;
   background-color: #eeeeee;
   display: flex;
   flex-direction: column;
@@ -33,18 +42,49 @@ body {
 }
 
 .computer-board .water:hover {
-  background-color: #dddddd;
+  background-color: var(--bg-color);
   cursor: pointer;
 }
 
 .boat {
-  background-color: #444444;
+  background-color: var(--boats-color);
 }
 
 .missed {
-  background-color: #85ffb3;
+  background-color: var(--missed-shots-color);
 }
 
 .hit {
-  background-color: #ff8585;
+  background-color: var(--hit-shots-color);
+}
+
+.winner-screen {
+  position: absolute;
+  z-index: 1;
+  top: calc(50% - 250px / 2);
+  width: 500px;
+  height: 250px;
+  background-color: var(--bg-color);
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px 100vh rgba(0, 0, 0, 0.3);
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.winner-msg {
+  font-size: 3rem;
+  font-family: sans-serif;
+}
+
+.restart-btn {
+  background-color: black;
+  color: var(--bg-color);
+  width: 250px;
+  box-sizing: border-box;
+  font-size: 3rem;
+  border-radius: inherit;
+  padding: 5px;
+  cursor: pointer;
 }
